--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^6.12.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.0",
     "morgan": "~1.9.1"
   }
