real time chat backend with problems

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 DB_URL=cluster0.ds0gb.mongodb.net/mindchas-backend?retryWrites=true&w=majority
 DB_PASSWORD=DB123456uSER
 DB_USER=DBUSER
+
+ENV=DEVELOPMENT
+
+
+SALT=ksjdfiwejiesldcl
+SECRET=dskfjslkdjfm2
