--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-JWT_EXPIRES_IN=90
+DB_URL=cluster0.ds0gb.mongodb.net/mindchas-backend?retryWrites=true&w=majority
+DB_PASSWORD=DB123456uSER
+DB_USER=DBUSER
+ENV=DEVELOPMENT
