--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
